--- a/MatchupMashup.csproj
+++ b/MatchupMashup.csproj
@@ -14,6 +14,8 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+    <PackageReference Include="HtmlAgilityPack" Version ="1.11.54" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" /> 
   </ItemGroup>
 
 </Project>
