Add Windows Form MainForm with service Fields
- Added private fields for database context and services
- Created MainForm.cs structure with InitializeServices methon
- Ready to implement UI controls and event handlers

--- a/MatchupMashup.csproj
+++ b/MatchupMashup.csproj
@@ -1,7 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
+    <UseWindowsForms>true</UseWindowsForms>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
